--- a/BMS.lpi
+++ b/BMS.lpi
@@ -73,6 +73,8 @@
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <GenerateDebugInfo Value="True"/>
+        <DebugInfoType Value="dsStabs"/>
         <StripSymbols Value="True"/>
       </Debugging>
       <LinkSmart Value="True"/>
